Refactored files for more security